@@ -77,6 +77,22 @@ Test::Kwalitee = 0
 Test::PerlTidy = 0
 Test::Pod = 0
 
+[OptionalFeature / custom_output]
+-description = Support custom output formatters
+IPC::Shareable = 0
+
+[OptionalFeature / database]
+-description = Support database tasks and describing host groups in a database
+DBI = 0
+
+[OptionalFeature / host_group_XML]
+-description = Support describing host groups in XML format
+XML::LibXML = 0
+
+[OptionalFeature / rsync]
+-description = Support rsync tasks
+Expect = 0
+
 [Test::MinimumVersion]
 max_target_perl = 5.10.1
 
