@@ -33,6 +33,7 @@ Revision history for Rex
  - Add initial config file tests
  - Test custom server functions
  - Add test for OS-specific dependencies
+ - List optional features and their dependencies
 
 1.12.1 2020-08-05 Ferenc Erki <erkiferenc@gmail.com>
  [DOCUMENTATION]
